--- a/ecommerce-microservices/docker-compose.yml
+++ b/ecommerce-microservices/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: click2buy_zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://click2buy_kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
@@ -199,6 +199,35 @@ services:
       - click2buy_net
     restart: unless-stopped
 
+  media-service:
+    build: ./media-service
+    container_name: click2buy_media-service
+    working_dir: /app
+    volumes:
+      - ./media-service:/app:delegated
+      - media_node_modules:/app/node_modules
+    ports:
+      - "3106:3006"
+    env_file:
+      - ./media-service/.env
+    environment:
+      CHOKIDAR_USEPOLLING: "true"
+      CHOKIDAR_INTERVAL: 500
+      CHOKIDAR_DEPTH: 99
+      NODE_ENV: development
+
+    command: sh -c "npm install && npm run start:dev"
+
+    depends_on:
+      - kafka
+      - mongo
+
+    networks:
+      - click2buy_net
+
+    restart: unless-stopped
+
+
   api-gateway:
     build: ./api-gateway
     container_name: click2buy_api-gateway
@@ -232,6 +261,7 @@ volumes:
   review_node_modules:
   gateway_node_modules:
   payment_node_modules:
+  media_node_modules:
 
 networks:
   click2buy_net:
