--- a/ecommerce-microservices/docker-compose.yml
+++ b/ecommerce-microservices/docker-compose.yml
@@ -54,6 +54,18 @@ services:
       - click2buy_net
 
   # ============================
+  # Redis
+  # ============================
+  redis:
+    image: redis:7
+    container_name: click2buy_redis
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - click2buy_net
+
+  # ============================
   # MICROSERVICES (NestJS)
   # ============================
 
@@ -227,6 +239,29 @@ services:
 
     restart: unless-stopped
 
+  inventory-service:
+    build: ./inventory-service
+    container_name: click2buy_inventory-service
+    working_dir: /app
+    volumes:
+      - ./inventory-service:/app:delegated
+      - inventory_node_modules:/app/node_modules
+    ports:
+      - "3107:3007"
+    env_file:
+      - ./inventory-service/.env
+    environment:
+      CHOKIDAR_USEPOLLING: "true"
+      CHOKIDAR_INTERVAL: 500
+      CHOKIDAR_DEPTH: 99
+    command: sh -c "npm install && npm run start:dev"
+    depends_on:
+      - kafka
+      - mongo
+    networks:
+      - click2buy_net
+    restart: unless-stopped
+
 
   api-gateway:
     build: ./api-gateway
@@ -262,6 +297,7 @@ volumes:
   gateway_node_modules:
   payment_node_modules:
   media_node_modules:
+  inventory_node_modules:
 
 networks:
   click2buy_net:
