Sửa createProduct, deleteProduct
Thêm status để xóa mềm Thêm cộng trừ stock của product

--- a/ecommerce-microservices/product-service/package.json
+++ b/ecommerce-microservices/product-service/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^11.1.8",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.19.3",
