chore: fix docker dependencies and standardize service ports

--- a/ecommerce-microservices/api-gateway/Dockerfile
+++ b/ecommerce-microservices/api-gateway/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Cài dependencies
-RUN npm install
+RUN npm install --legacy-peer-deps
 
 # Expose cổng nếu cần (Nest thường là 3000, nhưng microservice có thể không cần)
 EXPOSE 3001
