--- a/ecommerce-microservices/product-service/Dockerfile
+++ b/ecommerce-microservices/product-service/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Cài đặt dependency (sẽ bao gồm kafkajs)
-RUN npm install
+RUN npm install --legacy-peer-deps
 
 EXPOSE 3000
 CMD ["npm", "run", "start:dev"]
