--- a/ecommerce-microservices/timeout-service/Dockerfile
+++ b/ecommerce-microservices/timeout-service/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install --legacy-peer-deps
 
 EXPOSE 3000
 CMD ["npm", "run", "start:dev"]
