--- a/ecommerce-microservices/inventory-service/package.json
+++ b/ecommerce-microservices/inventory-service/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.2",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
+    "mongoose": "^9.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
