--- a/ecommerce-microservices/api-gateway/Dockerfile
+++ b/ecommerce-microservices/api-gateway/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Cài dependencies
-RUN npm install --legacy-peer-deps
+RUN npm install
 
 # Expose cổng nếu cần (Nest thường là 3000, nhưng microservice có thể không cần)
 EXPOSE 3001
