--- a/ecommerce-microservices/docker-compose.yml
+++ b/ecommerce-microservices/docker-compose.yml
@@ -25,24 +25,17 @@ services:
     restart: always
     depends_on:
       - zookeeper
-    ports:
-      - "19092:19092" # Cổng cho máy ngoài (Test script)
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: click2buy_zookeeper:2181
-      # CẤU HÌNH QUAN TRỌNG: Phân tách luồng trong và ngoài
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_LISTENERS: INTERNAL://0.0.0.0:9092,EXTERNAL://0.0.0.0:19092
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,EXTERNAL://localhost:19092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      #KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      #KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://click2buy_kafka:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://click2buy_kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
-    #ports:
-      #- "19092:9092" 
+    ports:
+      - "19092:9092"
     networks:
       - click2buy_net
 
@@ -92,7 +85,7 @@ services:
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
 
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    command: sh -c "npm install && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -138,7 +131,7 @@ services:
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
 
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    command: sh -c "npm install && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -162,7 +155,7 @@ services:
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
 
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    command: sh -c "npm install && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -186,7 +179,7 @@ services:
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
 
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    command: sh -c "npm install && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -210,7 +203,7 @@ services:
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
 
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    command: sh -c "npm install && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -235,7 +228,7 @@ services:
   #     CHOKIDAR_DEPTH: 99
   #     NODE_ENV: development
 
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+  #   command: sh -c "npm install && npm run start:dev"
 
   #   depends_on:
   #     - kafka
@@ -261,7 +254,7 @@ services:
       CHOKIDAR_USEPOLLING: "true"
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    command: sh -c "npm install && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -269,28 +262,6 @@ services:
       - click2buy_net
     restart: unless-stopped
 
-  seller-analytics-service:
-    build: ./seller-analytics-service
-    container_name: click2buy_seller-analytics-service
-    working_dir: /app
-    volumes:
-      - ./seller-analytics-service:/app:delegated
-      - seller_analytics_node_modules:/app/node_modules
-    ports:
-      - "3109:3009"
-    env_file:
-      - ./seller-analytics-service/.env
-    environment:
-      CHOKIDAR_USEPOLLING: "true"
-      CHOKIDAR_INTERVAL: 500
-      CHOKIDAR_DEPTH: 99
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
-    depends_on:
-      - kafka
-      - mongo
-    networks:
-      - click2buy_net
-    restart: unless-stopped
 
   api-gateway:
     build: ./api-gateway
@@ -308,7 +279,7 @@ services:
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
 
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    command: sh -c "npm install && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -350,7 +321,6 @@ volumes:
   payment_node_modules:
   media_node_modules:
   inventory_node_modules:
-  seller_analytics_node_modules:
   order_node_modules:
 networks:
   click2buy_net:
