--- a/ecommerce-microservices/seller-analytics-service/tsconfig.json
+++ b/ecommerce-microservices/seller-analytics-service/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node"],
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "resolvePackageJsonExports": true,
