--- a/ecommerce-microservices/docker-compose.yml
+++ b/ecommerce-microservices/docker-compose.yml
@@ -254,7 +254,7 @@ services:
       CHOKIDAR_USEPOLLING: "true"
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
-    command: sh -c "npm install && npm run start:dev"
+    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -310,6 +310,29 @@ services:
       - click2buy_net
     restart: unless-stopped
 
+  seller-analytics-service:
+    build: ./seller-analytics-service
+    container_name: click2buy_seller-analytics-service
+    working_dir: /app
+    volumes:
+      - ./seller-analytics-service:/app:delegated
+      - seller_analytics_node_modules:/app/node_modules
+    ports:
+      - "3110:3010" 
+    env_file:
+      - ./seller-analytics-service/.env
+    environment:
+      CHOKIDAR_USEPOLLING: "true"
+      CHOKIDAR_INTERVAL: 500
+      CHOKIDAR_DEPTH: 99
+    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    depends_on:
+      - kafka
+      - mongo
+    networks:
+      - click2buy_net
+    restart: unless-stopped
+
 volumes:
   click2buy_mongo_data:
   auth_node_modules:
@@ -322,6 +345,8 @@ volumes:
   media_node_modules:
   inventory_node_modules:
   order_node_modules:
+  seller_analytics_node_modules:
+
 networks:
   click2buy_net:
     driver: bridge
