--- a/ecommerce-microservices/api-gateway/package.json
+++ b/ecommerce-microservices/api-gateway/package.json
@@ -24,8 +24,10 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/microservices": "^11.1.8",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.3",
     "axios": "^1.7.7",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
@@ -33,7 +35,8 @@
     "kafkajs": "^2.2.4",
     "microservices": "^0.1.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
