--- a/ecommerce-microservices/api-gateway/package.json
+++ b/ecommerce-microservices/api-gateway/package.json
@@ -24,9 +24,11 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/microservices": "^11.1.8",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.1",
     "axios": "^1.7.7",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
