Thêm chức năng thanh toán mã QR payment-service

--- a/ecommerce-microservices/payment-service/Dockerfile
+++ b/ecommerce-microservices/payment-service/Dockerfile
@@ -12,6 +12,8 @@ COPY package*.json ./
 # Cài dependencies
 RUN npm install
 
+COPY . .
+
 # Expose cổng nếu cần (Nest thường là 3000, nhưng microservice có thể không cần)
 EXPOSE 3001
 
