--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
   "dependencies": {
+    "@nestjs/common": "^11.1.9",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.9",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/microservices": "^11.1.9",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/testing": "^11.1.9",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/react": "^19.2.7",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "framer-motion": "^12.23.25",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.556.0",
+    "mongoose": "^8.20.2",
+    "npm": "^11.6.4",
+    "react": "^19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.9.6",
+    "sonner": "^2.0.7",
+    "supertest": "^7.1.4",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36"
+    "@types/axios": "^0.9.36",
+    "@types/node": "^24.10.2",
+    "vite": "^7.2.7"
   }
 }
