fix(infra): add redis dependency to order-service to fix startup error

--- a/ecommerce-microservices/docker-compose.yml
+++ b/ecommerce-microservices/docker-compose.yml
@@ -306,6 +306,7 @@ services:
     depends_on:
       - kafka
       - mongo
+      - redis
     networks:
       - click2buy_net
     restart: unless-stopped
