--- a/ecommerce-microservices/api-gateway/package.json
+++ b/ecommerce-microservices/api-gateway/package.json
@@ -33,6 +33,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/websockets": "^11.1.9",
+    "@nestjs/swagger": "^11.0.0",
+    "yaml": "^2.3.4",
     "axios": "^1.7.7",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
