--- a/ecommerce-microservices/docker-compose.yml
+++ b/ecommerce-microservices/docker-compose.yml
@@ -279,7 +279,7 @@ services:
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
 
-    command: sh -c "npm install && npm run start:prod"
+    command: sh -c "npm install && npm run build && npm run start:prod"
     depends_on:
       - kafka
       - mongo
