--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["**/*.ts", "**/*.tsx", "postcss.config.cjs"],
   "exclude": ["node_modules"]
