--- a/ecommerce-microservices/inventory-service/Dockerfile
+++ b/ecommerce-microservices/inventory-service/Dockerfile
@@ -1,12 +1,12 @@
-FROM node:18-alpine
+FROM node:20-alpine
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install --legacy-peer-deps
+RUN npm install --production
 
 COPY . .
 
 RUN npm run build
 
-CMD ["node", "dist/main.js"]
+CMD ["npm", "run", "start:prod"]
