get product của seller có stock

--- a/ecommerce-microservices/docker-compose.yml
+++ b/ecommerce-microservices/docker-compose.yml
@@ -58,7 +58,7 @@ services:
   # ============================
   redis:
     image: redis:7
-    container_name: click2buy_redis
+    container_name: redis
     restart: always
     ports:
       - "6379:6379"
@@ -143,6 +143,9 @@ services:
     build: ./product-service
     container_name: click2buy_product-service
     working_dir: /app
+    volumes:
+      - ./product-service:/app:delegated
+      - product_node_modules:/app/node_modules
     ports:
       - "3103:3003"
     env_file:
@@ -151,6 +154,8 @@ services:
       CHOKIDAR_USEPOLLING: "true"
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
+
+    command: sh -c "npm install && npm run start:dev"
     depends_on:
       - kafka
       - mongo
@@ -262,6 +267,12 @@ services:
     build: ./api-gateway
     container_name: click2buy_api-gateway
     working_dir: /app
+    volumes:
+      - ./api-gateway/src:/app/src:delegated
+      - ./api-gateway/package.json:/app/package.json
+      - ./api-gateway/tsconfig.json:/app/tsconfig.json
+      - ./api-gateway/tsconfig.build.json:/app/tsconfig.build.json
+      - gateway_node_modules:/app/node_modules
     ports:
       - "3000:3000"
     env_file:
@@ -271,7 +282,7 @@ services:
       CHOKIDAR_INTERVAL: 500
       CHOKIDAR_DEPTH: 99
 
-    command: sh -c "npm install && npm run start:prod"
+    command: sh -c "npm install && npm run build && npm run start:dev"
     depends_on:
       - kafka
       - mongo
