--- a/ecommerce-microservices/media-service/Dockerfile
+++ b/ecommerce-microservices/media-service/Dockerfile
@@ -1,19 +1,25 @@
-# -----------------------------
-# Stage 1: Base
-# -----------------------------
-FROM node:18-alpine
-
-# Tạo thư mục làm việc trong container
-WORKDIR /app
-
-# Copy package.json trước để cài dependencies
-COPY package*.json ./
-
-# Cài dependencies
-RUN npm install
-
-# Expose cổng nếu cần (Nest thường là 3000, nhưng microservice có thể không cần)
-EXPOSE 3001
-
-# Lệnh chạy cho môi trường dev
-CMD ["npm", "run", "start:dev"]
+# --- BUILD STAGE ---
+    FROM node:20-alpine AS builder
+    WORKDIR /app
+    
+    # Copy package files
+    COPY package*.json ./
+    RUN npm install
+    
+    # Copy only gateway source!
+    COPY . .
+    
+    RUN npm run build
+    
+    
+    # --- PRODUCTION STAGE ---
+    FROM node:20-alpine AS production
+    WORKDIR /app
+    
+    COPY package*.json ./
+    RUN npm install --only=production
+    
+    COPY --from=builder /app/dist ./dist
+    
+    CMD ["node", "dist/main.js"]
+    
