Thêm stock phần getAll của seller product

--- a/ecommerce-microservices/inventory-service/Dockerfile
+++ b/ecommerce-microservices/inventory-service/Dockerfile
@@ -1,12 +1,19 @@
-FROM node:18-alpine
+# -----------------------------
+# Stage 1: Base
+# -----------------------------
+    FROM node:20-alpine
 
-WORKDIR /app
-
-COPY package*.json ./
-RUN npm install --legacy-peer-deps
-
-COPY . .
-
-RUN npm run build
-
-CMD ["node", "dist/main.js"]
+    # Tạo thư mục làm việc trong container
+    WORKDIR /app
+    
+    # Copy package.json trước để cài dependencies
+    COPY package*.json ./
+    
+    # Cài dependencies
+    RUN npm install
+    
+    # Expose cổng nếu cần (Nest thường là 3000, nhưng microservice có thể không cần)
+    EXPOSE 3001
+    
+    # Lệnh chạy cho môi trường dev
+    CMD ["npm", "run", "start:dev"]
