--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.447.0",
     "path": "^0.12.7",
     "postcss-load-config": "^6.0.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -55,6 +56,7 @@
     "react-resizable-panels": "^2.1.4",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.12.7",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "vaul": "^0.9.9"
