--- a/ecommerce-microservices/payment-service/package.json
+++ b/ecommerce-microservices/payment-service/package.json
@@ -15,6 +15,7 @@
     "@nestjs/common": "^10.4.20",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/microservices": "^10.4.20",
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.4.20",
@@ -23,6 +24,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.0.3",
     "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.3",
     "kafkajs": "^2.2.4",
     "moment": "^2.29.4",
     "mongoose": "^8.0.0",
