--- a/ecommerce-microservices/api-gateway/Dockerfile
+++ b/ecommerce-microservices/api-gateway/Dockerfile
@@ -1,13 +1,23 @@
-
-FROM node:20-alpine
+# ------------ BUILD STAGE --------------
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install --production
+RUN npm install     # <-- phải cài đầy đủ devDeps để build
 
 COPY . .
+RUN npm run build   # <-- build NestJS ra dist/
 
-RUN npm run build
 
-CMD ["npm", "run", "start:prod"]
+# ------------ PRODUCTION STAGE --------------
+FROM node:20-alpine AS production
+
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm install --production   # <-- chỉ install deps cần khi chạy
+
+COPY --from=builder /app/dist ./dist
+
+CMD ["node", "dist/main.js"]
