--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/jwt": "^11.0.2",
+    "@nestjs/microservices": "^11.1.10",
+    "@nestjs/mongoose": "^11.0.4",
     "@nestjs/websockets": "^11.1.9",
+    "class-validator": "^0.14.3",
     "socket.io": "^4.8.1"
   }
 }
